// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/NamedValue.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/URI.proto";
import "./UserRight.proto";


package file.protobuf;

message Document {
extensions 9 to 109;

  optional ccsds_mal.protobuf.STRING lockedBy = 1;
  optional ccsds_mal.protobuf.URI dirname = 2;
  repeated ccsds_mal.protobuf.NamedValue properties = 3;
  optional file.protobuf.UserRight usersAccess = 4;
  optional ccsds_mal.protobuf.STRING basename = 5;
  optional ccsds_mal.protobuf.STRING creatorUser = 6;
  optional ccsds_mal.protobuf.UINTEGER filesize = 7;
  optional ccsds_mal.protobuf.BOOLEAN confidentialityTracesTrigger = 8;
}
